--- a/02-StatisticsWithR/RW-01023-RSS-HK.html
+++ b/02-StatisticsWithR/RW-01023-RSS-HK.html
@@ -12,9 +12,10 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## Statistical Modelling with R for Actuarial Students
+## Modelling Data with R - Linear Models
 
 ---
+
 
 
 
@@ -27,190 +28,207 @@ pre {
 }
 &lt;/style&gt;
 
-***CS2B – Risk Modelling and Survival Analysis ***
-
-
-* The emphasis is placed on being able to apply statistical methods to actuarial problems using real data sets and the open-source software environment R. 
-
-* Time Series. Probability Distributions, Survival Analysis
-
----
-
-A general insurance company has sold 5000 Accident Benefit Policies to independent lives.
-
-* The number of claims follows a Poisson distribution with parameter 500. 
-
-* The amount of claim from individual policy is following a Gamma distribution with parameters `\(\alpha = 250\)` and `\(\lambda = 0.5\)`.
+In a study of the strength of pencil leads, standard length pieces of pencil lead 
+were supported on two ends and loaded at their mid-points. Samples of five 
+pieces each of 4H, H and B lead were used and the breaking stresses (load, in 
+grams) at which each piece failed were recorded. The resulting data are given 
+below. 
 
 
 
-#### Exercise
-
-Calculate the aggregate claim amount paid by the insurer by simulating 5000 values if the insurer retains only 500 (assume the aggregate claim amount follows a compound Poisson distribution). 
-
-*Use seed number 4321.*
-
+|         |     |     |     |      |     |
+|:--------|:----|:----|:----|:-----|:----|
+|4H lead: |56.7 |63.8 |56.7 |63.8  |49.6 |
+|H lead:  |99.2 |99.2 |92.1 |106.0 |99.2 |
+|B lead:  |56.7 |63.8 |70.9 |63.8  |70.9 |
 
 ---
 
-***Poisson Distribution***
-
-* Simulating the number of claims
-* Poisson Random Variable with mean `\(\lambda = 500\)`
+### Creating the Data
 
 
 ```r
-set.seed(4321)
+measurements &lt;- c(56.7 ,63.8 ,56.7 ,63.8 ,49.6 ,
+                  99.2 ,99.2 ,92.1 ,106.0 ,99.2 ,
+                  56.7 ,63.8 ,70.9 ,63.8, 70.9)
 
-rpois(10,lambda=500)
+penciltypes &lt;- c( rep("4H",5), rep("H",5), rep("B",5))
+
+class(penciltypes)
 ```
 
 ```
-##  [1] 490 461 518 497 472 504 527 483 500 516
+## [1] "character"
 ```
-
 
 
 ```r
-set.seed(4321)
+penciltypes &lt;- factor(penciltypes, levels=c("4H","H","B"))
 
-num_claims &lt;- rpois(1,lambda=500)
-
-num_claims
+class(penciltypes)
 ```
 
 ```
-## [1] 490
+## [1] "factor"
+```
+
+
+```r
+myDF &lt;- data.frame(measurements,penciltypes)
 ```
 
 ---
 
+### Exercise 1
 
-***Individual claim amounts***
+Perform an analysis of variance on the above data and determine 
+whether there are any differences between the population mean 
+breaking stresses of 4H, H and B pencil lead. 
 
-Gamma Distribution
-
-* Shape Parameter `\(\alpha = 250\)`
-* Rate Parameter `\(\lambda = 0.5\)`
-* Scale Parameter `\(\beta = \frac{1}{\lambda} = 2\)`
-
-
-```r
-rgamma(1,shape = 250, scale = 2)
-```
-
-```
-## [1] 446.5083
-```
-
-
-
-```r
-claims &lt;- rgamma(num_claims,shape = 250, scale= 2)
-
-head(claims)
-```
-
-```
-## [1] 525.9362 494.9533 460.3728 505.2112 538.9663 476.5538
-```
-
-```r
-length(claims)
-```
-
-```
-## [1] 490
-```
-
-
----
-
-
-***Parallel Maxima and Minima***
-
-
-```r
-claims &lt;- c( 530, 480, 490, 505, 515, 525, 475)
-
-pmax(claims,500)
-```
-
-```
-## [1] 530 500 500 505 515 525 500
-```
-
-
-
-```r
-pmin(claims,500)
-```
-
-```
-## [1] 500 480 490 500 500 500 475
-```
-
-
----
-
-
-***Simulation of 5000 observations***
-
-
-
-```r
-set.seed(4321)
-n &lt;- rpois(5000,lambda = 500)
-
-Agg_Claim &lt;- rep(0,5000)
-
-for(j in 1:5000){
-    y&lt;-rgamma(n[j], shape = 250,  scale = 0.5)
-    
-    z&lt;-pmin(y,500)
-    
-    Agg_Claim[j] &lt;-sum(z)
-    }
-```
-
----
-
-
-
-```r
-head(Agg_Claim,20)
-```
-
-```
-##  [1] 61301.49 57788.84 64715.93 61998.01 58977.62 63068.42 65779.83 60292.86
-##  [9] 62680.42 64289.25 59598.01 59076.25 67783.81 63720.93 57725.33 60282.14
-## [17] 61959.80 62406.58 63949.43 62140.21
-```
+You are given that the assumptions hold for the analysis to be valid. 
 
 
 ---
 
 
 ```r
-summary(Agg_Claim)
+boxplot(measurements~ penciltypes, data= myDF)
 ```
 
-```
-##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-##   53226   60670   62477   62499   64352   72714
-```
+![](RW-01023-RSS-HK_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
 
 ---
+
+
+```r
+aov(measurements~ penciltypes, data= myDF)
+```
+
+```
+## Call:
+##    aov(formula = measurements ~ penciltypes, data = myDF)
+## 
+## Terms:
+##                 penciltypes Residuals
+## Sum of Squares     4806.028   378.928
+## Deg. of Freedom           2        12
+## 
+## Residual standard error: 5.619371
+## Estimated effects may be unbalanced
+```
+
+```r
+# measurements and penciltypes exist as objects, so we dont need to specify the data set
+```
+
+Remark: measurements and penciltypes exist as objects, so we dont need to specify the data set
+
+
+---
+
+
+```r
+myAOVmodel &lt;- aov(measurements~ penciltypes, data= myDF)
+summary(myAOVmodel)
+```
+
+```
+##             Df Sum Sq Mean Sq F value   Pr(&gt;F)    
+## penciltypes  2   4806  2403.0    76.1 1.52e-07 ***
+## Residuals   12    379    31.6                     
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+```
+---
+
+
 
 
 
 ```r
-hist(Agg_Claim,breaks=100)
+plot(myAOVmodel , which=1, pch=18,col="red",cex=2)
 ```
 
-![](01-Exercise1-ShortQuestion_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+![](RW-01023-RSS-HK_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
+---
+
+
+```r
+plot(myAOVmodel, which=2, pch=18,col="red",cex=2)
+```
+
+![](RW-01023-RSS-HK_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+
 
 ---
+
+
+
+### Exercise 3
+
+* Carry out a post-hoc analysis to obtain confidence intervals for the pairwise differences between the population mean breaking stresses of the three types of pencil lead. * 
+
+---
+ 
+#### Post Hoc Tests 
+
+After a multivariate test (ANOVA), it is often desired to know more about the specific groups to find out if they are significantly different or similar. This step after analysis is referred to as ‘post-hoc analysis’ and is a major step in hypothesis testing.
+
+One common and popular method of post-hoc analysis is Tukey’s Test. The test is known by several different names. Tukey’s test compares the means of all treatments to the mean of every other treatment and is considered the best available method in cases when confidence intervals are desired or if sample sizes are unequal (Wikipedia).
+
+---
+
+The ***TukeyHSD()*** function is available in base R and takes a fitted ***aov*** object.
+
+
+```r
+tukey.test &lt;- TukeyHSD(myAOVmodel)
+tukey.test
+```
+
+```
+##   Tukey multiple comparisons of means
+##     95% family-wise confidence level
+## 
+## Fit: aov(formula = measurements ~ penciltypes, data = myDF)
+## 
+## $penciltypes
+##        diff        lwr       upr     p adj
+## H-4H  41.02  31.538406  50.50159 0.0000002
+## B-4H   7.10  -2.381594  16.58159 0.1551368
+## B-H  -33.92 -43.401594 -24.43841 0.0000017
+```
+
+---
+
+### Conclusion
+
+The output gives the difference in means, confidence levels and the adjusted p-values for all possible pairs. 
+
+Note the pairings that do not contain 0 in the confidence intervals and thus, have significant difference. 
+
+The confidence levels and p-values show significant between-group differences is for the pairings of ***4H v H*** and ***H vs B***, with no significant difference for the pairing ***4H vs B***.
+
+
+The results can also be plotted.
+
+---
+
+
+```r
+plot(tukey.test)
+```
+
+![](RW-01023-RSS-HK_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
+
+---
+
+
+---
+
+* HKSS HC2 - 2007 - Question 3
+* https://hkss.org.hk/index.php/prof/exam/doc?highlight=WyJleGFtcyIsImV4YW0iXQ==
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
