--- a/02-StatisticsWithR/RW-01024-RSS-HK.html
+++ b/02-StatisticsWithR/RW-01024-RSS-HK.html
@@ -12,205 +12,57 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## Statistical Modelling with R for Actuarial Students
+## Probability Distributions
 
 ---
 
 
 
+```
+## Warning: package 'knitr' was built under R version 4.0.5
+```
 
-&lt;style type="text/css"&gt;
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
-&lt;/style&gt;
-
-***CS2B – Risk Modelling and Survival Analysis ***
-
-
-* The emphasis is placed on being able to apply statistical methods to actuarial problems using real data sets and the open-source software environment R. 
-
-* Time Series. Probability Distributions, Survival Analysis
-
----
-
-A general insurance company has sold 5000 Accident Benefit Policies to independent lives.
-
-* The number of claims follows a Poisson distribution with parameter 500. 
-
-* The amount of claim from individual policy is following a Gamma distribution with parameters `\(\alpha = 250\)` and `\(\lambda = 0.5\)`.
-
-
-
-#### Exercise
-
-Calculate the aggregate claim amount paid by the insurer by simulating 5000 values if the insurer retains only 500 (assume the aggregate claim amount follows a compound Poisson distribution). 
-
-*Use seed number 4321.*
+In a factory manufacturing electronic components, there are four machine operators 
+and five machines producing similar items. The quality of the components having 
+been variable, an experiment was conducted to determine whether the variability was 
+caused by differences between machines, differences between operators or both. The 
+production was observed for each shift, with each operator using each of the five 
+machines for a whole shift. The quality of the components produced during any shift 
+was assessed by quality control inspectors on a scale of 0 to 100, with 100 
+corresponding to perfect quality and 0 to useless material. 
 
 
 ---
 
-***Poisson Distribution***
-
-* Simulating the number of claims
-* Poisson Random Variable with mean `\(\lambda = 500\)`
-
-
-```r
-set.seed(4321)
-
-rpois(10,lambda=500)
-```
-
-```
-##  [1] 490 461 518 497 472 504 527 483 500 516
-```
+The values of the quality 
+scores were as given in the following table. 
+Machine
+A B C D E 
+Operator 1 56 92 53 93 68 
+Operator 2 64 83 55 95 62 
+Operator 3 62 80 56 96 62 Operator 
+Operator 4 51 78 44 88 69 
+---
+Sums for the five machines are 233, 333, 208, 372, 261; sums for the four operators 
+are 362, 359, 356, 330; the sum of squares of the 20 values is 104127. 
 
 
-
-```r
-set.seed(4321)
-
-num_claims &lt;- rpois(1,lambda=500)
-
-num_claims
-```
-
-```
-## [1] 490
-```
+(i) Write down a linear model which could be used as the basis for an analysis of 
+a set of data such as that shown above. Explain clearly what each term in the 
+model represents, and state any assumptions required for the analysis to be 
+valid. 
+---
+2.  Carry out an appropriate analysis of variance, and test for differences between 
+operators and between machines. 
 
 ---
 
+3.  Explain briefly how you might attempt to check whether the assumptions 
+required for an analysis of variance are satisfied.---
 
-***Individual claim amounts***
+%%-- HKSS HC2 - 2007 - Question 3
+%%-- https://hkss.org.hk/index.php/prof/exam/doc?highlight=WyJleGFtcyIsImV4YW0iXQ==
 
-Gamma Distribution
-
-* Shape Parameter `\(\alpha = 250\)`
-* Rate Parameter `\(\lambda = 0.5\)`
-* Scale Parameter `\(\beta = \frac{1}{\lambda} = 2\)`
-
-
-```r
-rgamma(1,shape = 250, scale = 2)
-```
-
-```
-## [1] 446.5083
-```
-
-
-
-```r
-claims &lt;- rgamma(num_claims,shape = 250, scale= 2)
-
-head(claims)
-```
-
-```
-## [1] 525.9362 494.9533 460.3728 505.2112 538.9663 476.5538
-```
-
-```r
-length(claims)
-```
-
-```
-## [1] 490
-```
-
-
----
-
-
-***Parallel Maxima and Minima***
-
-
-```r
-claims &lt;- c( 530, 480, 490, 505, 515, 525, 475)
-
-pmax(claims,500)
-```
-
-```
-## [1] 530 500 500 505 515 525 500
-```
-
-
-
-```r
-pmin(claims,500)
-```
-
-```
-## [1] 500 480 490 500 500 500 475
-```
-
-
----
-
-
-***Simulation of 5000 observations***
-
-
-
-```r
-set.seed(4321)
-n &lt;- rpois(5000,lambda = 500)
-
-Agg_Claim &lt;- rep(0,5000)
-
-for(j in 1:5000){
-    y&lt;-rgamma(n[j], shape = 250,  scale = 0.5)
-    
-    z&lt;-pmin(y,500)
-    
-    Agg_Claim[j] &lt;-sum(z)
-    }
-```
-
----
-
-
-
-```r
-head(Agg_Claim,20)
-```
-
-```
-##  [1] 61301.49 57788.84 64715.93 61998.01 58977.62 63068.42 65779.83 60292.86
-##  [9] 62680.42 64289.25 59598.01 59076.25 67783.81 63720.93 57725.33 60282.14
-## [17] 61959.80 62406.58 63949.43 62140.21
-```
-
-
----
-
-
-```r
-summary(Agg_Claim)
-```
-
-```
-##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-##   53226   60670   62477   62499   64352   72714
-```
-
----
-
-
-
-```r
-hist(Agg_Claim,breaks=100)
-```
-
-![](01-Exercise1-ShortQuestion_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
-
----
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
