--- a/02-StatisticsWithR/RW-01025-RSS.html
+++ b/02-StatisticsWithR/RW-01025-RSS.html
@@ -12,10 +12,22 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## Statistical Modelling with R for Actuarial Students
+## Introduction to R for Actuarial Students
 
 ---
 
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+* Probability Distributions
+
+* Question 3
+
+---
 
 
 
@@ -27,190 +39,33 @@ pre {
 }
 &lt;/style&gt;
 
-***CS2B – Risk Modelling and Survival Analysis ***
 
 
-* The emphasis is placed on being able to apply statistical methods to actuarial problems using real data sets and the open-source software environment R. 
+3. The table below shows the UK Gross Domestic Product (GDP, y) for the years 1989 − 1999, with years also coded as t = year − 1994.  
+The figures are given in units of £bn, and are expressed in 1995 prices. 
+ 
+ 
+Year 1989 1990 1991 1992 1993 1994 1995 1996 1997 1998 1999 t -5 -4 -3 -2 -1 0 1 2 3 4 5 y 655.2 659.5 649.8 650.3 665.4 694.6 714.0 732.2 757.9 777.9 794.4 
+ Source:  United Kingdom National Accounts, 2000 edn, table 1.1. 
 
-* Time Series. Probability Distributions, Survival Analysis
-
----
-
-A general insurance company has sold 5000 Accident Benefit Policies to independent lives.
-
-* The number of claims follows a Poisson distribution with parameter 500. 
-
-* The amount of claim from individual policy is following a Gamma distribution with parameters `\(\alpha = 250\)` and `\(\lambda = 0.5\)`.
-
-
-
-#### Exercise
-
-Calculate the aggregate claim amount paid by the insurer by simulating 5000 values if the insurer retains only 500 (assume the aggregate claim amount follows a compound Poisson distribution). 
-
-*Use seed number 4321.*
+--- 
+ 
+(i) A model `\(y = \alpha + \beta t + \varepsilon\)` , where ε is a random error term with the usual properties, is proposed for the data. 
+ Obtain least squares estimates of α
+ and β , and calculate r2 (the coefficient of determination).  Also estimate `\(\sigma^2\)`, the variance of ε , and obtain estimates of the standard errors of the coefficients α and β . (6) 
+ 
+--- 
+2.  What are "the usual properties" of the errors?  How realistic is the assumption that the errors have these properties?  (You are not expected to describe or conduct any tests.) (2) 
 
 
 ---
-
-***Poisson Distribution***
-
-* Simulating the number of claims
-* Poisson Random Variable with mean `\(\lambda = 500\)`
-
-
-```r
-set.seed(4321)
-
-rpois(10,lambda=500)
-```
-
-```
-##  [1] 490 461 518 497 472 504 527 483 500 516
-```
-
-
-
-```r
-set.seed(4321)
-
-num_claims &lt;- rpois(1,lambda=500)
-
-num_claims
-```
-
-```
-## [1] 490
-```
-
----
-
-
-***Individual claim amounts***
-
-Gamma Distribution
-
-* Shape Parameter `\(\alpha = 250\)`
-* Rate Parameter `\(\lambda = 0.5\)`
-* Scale Parameter `\(\beta = \frac{1}{\lambda} = 2\)`
-
-
-```r
-rgamma(1,shape = 250, scale = 2)
-```
-
-```
-## [1] 446.5083
-```
-
-
-
-```r
-claims &lt;- rgamma(num_claims,shape = 250, scale= 2)
-
-head(claims)
-```
-
-```
-## [1] 525.9362 494.9533 460.3728 505.2112 538.9663 476.5538
-```
-
-```r
-length(claims)
-```
-
-```
-## [1] 490
-```
-
-
----
-
-
-***Parallel Maxima and Minima***
-
-
-```r
-claims &lt;- c( 530, 480, 490, 505, 515, 525, 475)
-
-pmax(claims,500)
-```
-
-```
-## [1] 530 500 500 505 515 525 500
-```
-
-
-
-```r
-pmin(claims,500)
-```
-
-```
-## [1] 500 480 490 500 500 500 475
-```
-
-
----
-
-
-***Simulation of 5000 observations***
-
-
-
-```r
-set.seed(4321)
-n &lt;- rpois(5000,lambda = 500)
-
-Agg_Claim &lt;- rep(0,5000)
-
-for(j in 1:5000){
-    y&lt;-rgamma(n[j], shape = 250,  scale = 0.5)
-    
-    z&lt;-pmin(y,500)
-    
-    Agg_Claim[j] &lt;-sum(z)
-    }
-```
-
----
-
-
-
-```r
-head(Agg_Claim,20)
-```
-
-```
-##  [1] 61301.49 57788.84 64715.93 61998.01 58977.62 63068.42 65779.83 60292.86
-##  [9] 62680.42 64289.25 59598.01 59076.25 67783.81 63720.93 57725.33 60282.14
-## [17] 61959.80 62406.58 63949.43 62140.21
-```
-
-
----
-
-
-```r
-summary(Agg_Claim)
-```
-
-```
-##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-##   53226   60670   62477   62499   64352   72714
-```
-
----
-
-
-
-```r
-hist(Agg_Claim,breaks=100)
-```
-
-![](01-Exercise1-ShortQuestion_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
-
----
+ 3.  Interpret the value of r2, and the values of your estimates of `\(\alpha\)` and `\(\beta\)` . (3) 
+ 
+(iv) Draw a time chart of the data and superimpose your estimated function on it. (5) 
+ 
+(v) Use your estimated model to predict GDP in 2000 and 2010, and comment on your predictions in the light of your graph. (4) 
+ 
+ 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
