--- a/02-StatisticsWithR/RW-01027-RSS.html
+++ b/02-StatisticsWithR/RW-01027-RSS.html
@@ -12,9 +12,10 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## Statistical Modelling with R for Actuarial Students
+## Modelling Data with R - Linear Regression
 
 ---
+
 
 
 
@@ -27,190 +28,108 @@ pre {
 }
 &lt;/style&gt;
 
-***CS2B – Risk Modelling and Survival Analysis ***
+A herbicide experiment was carried out on oats.  This experiment was laid out in a completely randomised design and involved 4 
+herbicides with 10 plots per herbicide.  
 
+The variable recorded (y) was the number of weeds seen on each plot.  
+A review of the data suggested that the variances were not equal.  
+The data were analysed both in their original form and after being transformed.  
 
-* The emphasis is placed on being able to apply statistical methods to actuarial problems using real data sets and the open-source software environment R. 
-
-* Time Series. Probability Distributions, Survival Analysis
-
+Transformations tried were square root, logarithm and exponential.  
+The following table contains values of the means and variances of the transformed data. 
+ 
+ 
 ---
 
-A general insurance company has sold 5000 Accident Benefit Policies to independent lives.
-
-* The number of claims follows a Poisson distribution with parameter 500. 
-
-* The amount of claim from individual policy is following a Gamma distribution with parameters `\(\alpha = 250\)` and `\(\lambda = 0.5\)`.
-
-
-
-#### Exercise
-
-Calculate the aggregate claim amount paid by the insurer by simulating 5000 values if the insurer retains only 500 (assume the aggregate claim amount follows a compound Poisson distribution). 
-
-*Use seed number 4321.*
-
-
----
-
-***Poisson Distribution***
-
-* Simulating the number of claims
-* Poisson Random Variable with mean `\(\lambda = 500\)`
-
-
-```r
-set.seed(4321)
-
-rpois(10,lambda=500)
-```
-
-```
-##  [1] 490 461 518 497 472 504 527 483 500 516
-```
-
-
-
-```r
-set.seed(4321)
-
-num_claims &lt;- rpois(1,lambda=500)
-
-num_claims
-```
-
-```
-## [1] 490
-```
-
----
-
-
-***Individual claim amounts***
-
-Gamma Distribution
-
-* Shape Parameter `\(\alpha = 250\)`
-* Rate Parameter `\(\lambda = 0.5\)`
-* Scale Parameter `\(\beta = \frac{1}{\lambda} = 2\)`
-
-
-```r
-rgamma(1,shape = 250, scale = 2)
-```
-
-```
-## [1] 446.5083
-```
-
-
-
-```r
-claims &lt;- rgamma(num_claims,shape = 250, scale= 2)
-
-head(claims)
-```
-
-```
-## [1] 525.9362 494.9533 460.3728 505.2112 538.9663 476.5538
-```
-
-```r
-length(claims)
-```
-
-```
-## [1] 490
-```
+\begin{verbatim} 
+ Transformation Herbicide None √y log10(y) exp(y/100)  
+mean variance mean variance mean variance mean variance 
+A 99.30  477.429.903 1.3572 1.9857 0.01195 2.754 0.3047 
+B 79.20  143.768.877 0.4489 1.8943 0.00425 2.222 0.0726 
+C  139.10 1648.40  11.679 3.0067 2.1260 0.01719 4.3323.2833 
+D  185.00 2819.60  13.472 3.8967 2.2502 0.01693 7.220  15.3664 
+\end{verbatim}
 
 
 ---
 
+1. State the assumptions required for the analysis of variance (ANOVA).  
+State, giving reasons, whether the untransformed data appear to satisfy the assumptions. (6) 
+ 
+2.  Assuming that one of these transformations must be chosen, which appears to be the best?  Explain why you selected it.  Is there evidence that a better transformation could be found?  Explain your answer. (5) 
+ 
+3.  Produce the ANOVA table for the transformation chosen. The (corrected) total sums of squares for the various transformations are shown below. 
+\begin{verbatim}  
+ Transformation  None √y log10(y) exp(y/100) 
+Corrected total SS 111329 201.189 1.18743 322.795 
+\end{verbatim} 
 
-***Parallel Maxima and Minima***
+---
+
+For the selected transformation, does the analysis suggest the herbicides have different effects?  Explain your answer. (6) 
+ 
+(iv) Alternative methods of checking the validity of an analysis of variance model make use of residuals.  Explain how a residual is calculated, and briefly describe one way in which a plot of residuals can be used to help check the validity of a model. (3) 
+ 
 
 
-```r
-claims &lt;- c( 530, 480, 490, 505, 515, 525, 475)
-
-pmax(claims,500)
-```
-
-```
-## [1] 530 500 500 505 515 525 500
-```
-
-
-
-```r
-pmin(claims,500)
-```
-
-```
-## [1] 500 480 490 500 500 500 475
-```
+*Completely randomised design is analysed according to the linear model
+yij = m+ ti + eij , where i = 1 to 4, j = 1 to 10,
+yij is the number of weeds on the jth plot that received treatment i, ti is the effect
+(departure from overall mean m) due to treatment i, and eij is a random (natural
+variation) term, Normally distributed with mean 0 and variance σ
+2 which is constant
+for all observations.
 
 
 ---
 
+The variances in the four treatments do not appear constant in the untransformed data.
+We assume that the model is additive (a sum of terms) but cannot check this without
+computing the values of the residuals.
+*The transformation exp
+100
+ y 
+ 
+ 
+also gives very unequal variances. The range
+of variances in y is largest/smallest ≈ 8.7 whereas for ( ) 10 log y it is ≈ 4.0 ; thus
+we should choose ( ) 10 log y . 
 
-***Simulation of 5000 observations***
-
-
-
-```r
-set.seed(4321)
-n &lt;- rpois(5000,lambda = 500)
-
-Agg_Claim &lt;- rep(0,5000)
-
-for(j in 1:5000){
-    y&lt;-rgamma(n[j], shape = 250,  scale = 0.5)
-    
-    z&lt;-pmin(y,500)
-    
-    Agg_Claim[j] &lt;-sum(z)
-    }
-```
+However, a ratio 4:1 among variances is still rather
+high, though not unusual with small samples of data. A better transformation could
+probably be found, provided it made physical sense.
 
 ---
 
+*The herbicide totals using ( ) 10 log y are 19.857, 18.943, 21.260, 22.502, each
+based on 10 observations; these add to 82.562. Herbicides SS is therefore
+1 (19.8572 ... 22.5022 ) 1 (82.5622 ) 171.1465302 170.4120961 0.7344341
+10 40
++ + − = − = .
+Analysis of Variance of ( ) 10 log y :
+Source df Sum of Squares Mean Square F value
+Herbicides 3 0.73443 0.2448 19.45 (very highly sig)
+Residual 36 0.45300 0.01258
+Total 39 1.18743
 
+---
 
-```r
-head(Agg_Claim,20)
-```
-
-```
-##  [1] 61301.49 57788.84 64715.93 61998.01 58977.62 63068.42 65779.83 60292.86
-##  [9] 62680.42 64289.25 59598.01 59076.25 67783.81 63720.93 57725.33 60282.14
-## [17] 61959.80 62406.58 63949.43 62140.21
-```
+*  There is strong evidence of the presence of differences among the herbicide means,
+since the value 19.45 is very highly significant when referred to F3,36.
+*A residual is the difference between an observed yij and its fitted value using
+the linear model. In a completely randomised design, fitted values for each treatment
+are the treatment mean for that treatment.
 
 
 ---
 
-
-```r
-summary(Agg_Claim)
-```
-
-```
-##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-##   53226   60670   62477   62499   64352   72714
-```
-
----
+If residuals are plotted against fitted values,
+for each observation, the resulting pattern should show a set of values randomly
+scattered about 0, with concentration near 0 and no outliers so that the Normality
+assumption is acceptable. Variability should show no pattern depending on the size of
+yij, or which treatment it received.
 
 
-
-```r
-hist(Agg_Claim,breaks=100)
-```
-
-![](01-Exercise1-ShortQuestion_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
-
----
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
