--- a/00-A1/05-Part5.html
+++ b/00-A1/05-Part5.html
@@ -65,8 +65,8 @@ Your answer should include a summary of the fitted model.
 ```r
 # fit the linear model
 
-linear_model&lt;-lm(Failure.Time ~ Material.Type + Rainfall,data =
-cables_data)
+linear_model&lt;-lm(Failure.Time ~ Material.Type + Rainfall,
+                 data = cables_data)
 ```
 
 ---
