--- a/00-H1-CS1B-ASI-March-2021/Question_3.html
+++ b/00-H1-CS1B-ASI-March-2021/Question_3.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.7/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -47,8 +47,8 @@ monthly basis.
 
 ---
 
-Part 1
-====================
+### Exercise  1
+
 Enter data in R. 
 
 
@@ -61,8 +61,8 @@ city2 &lt;- c(8919,9095,9046,9321,9719,9704,9107,9275)
 
 ---
 
-Part 2
-====================
+### Exercise  2
+
 Test at 5% level with clearly mentioning the hypothesis, if there is a difference in the 
 mean of the two sample data assuming equal &amp; unknown variances. 
 
@@ -118,8 +118,9 @@ t.test(x=city1, y=city2, conf.level = 0.95)
 ```
 
 ---
-Part 3
-====================
+
+### Exercise  3
+
 
 Test whether the variances are equal at 5% level and comment on the results. 
 
@@ -147,8 +148,8 @@ The p-value is 0.5691 &gt; 5%, so there is insufficient evidence to reject the a
 
 ---
 
-Part 4
-====================
+### Exercise  4
+
 Calculate the 95% confidence interval for the difference in means. 
 
 
@@ -156,7 +157,11 @@ Calculate the 95% confidence interval for the difference in means.
 Confidence interval can be read from Part 2 or can be derived as below: 
 
 ```r
-t.test(x=city1,y=city2,var.equal = TRUE,conf.level = 0.95)$conf.int 
+my.t.Test &lt;- t.test(x=city1,y=city2,
+       var.equal = TRUE,
+       conf.level = 0.95)
+
+my.t.Test$conf.int 
 ```
 
 ```
@@ -168,12 +173,17 @@ i.e. 95% CI is (-337.39, 241.89)
 
 ---
 
-Part 5
-====================
+### Exercise 5
+
 
 Comment on your findings in part 2 and part 4. 
 
 The confidence interval (-337,241) contains 0, therefore the assumption of equal means holds. 
+
+---
+
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
