--- a/00-E1-CS1B-FIA-September-2020/05-Exercise5.html
+++ b/00-E1-CS1B-FIA-September-2020/05-Exercise5.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,64 +12,199 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Introduction to R for Actuarial Students
+
+---
+
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 2 - Chi Square Test
 
 ---
 
 
 
-[Total 15] CS1B A2021–3 
-2 An analysis was carried out to investigate the fairness of two exam markers. They 
-both marked the same 150 exam papers, with 10 questions and total possible marks of 
-100 for each exam paper. The data were collected and arranged into 10 equally spaced 
-groups, with marks rounded to the nearest whole number. 
-Below are the frequencies of the marks given by each of the exam markers: 
-Exam marks 0–10 11–20 21–30 31–40 41–50 51–60 61–70 71–80 81–90 91–100
-Marker 1 1 8 14 22 33 34 21 9 6 2 
-Marker 2 0 4 16 25 27 42 23 4 9 0 
- 
- 
-==================================== 
-You can enter the exam marks for Marker 1 and Marker 2 into R using: 
+
+&lt;style type="text/css"&gt;
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+&lt;/style&gt;
+
+5 A waiting time random variable X follows an Exponential distribution with rate l
+parameterised as f (x) = le–lx (x &gt; 0, l &gt; 0).
+The rate l has a Gamma prior distribution with parameters `\(a\)` and `\(s\)`. 
+
+A Bayesian credibility model provides that the posterior mean of 1/l can be expressed as
+Z3x + (1– Z)3
+s
+α – 1
+, where Z = n
+α + n – 1
+with n being the number of past waiting times observed.
+Assume that the parameters of the prior Gamma distribution are `\(a = 5\)` and `\(s = 1\)`.
+
+
+---
+
+(i) Determine an estimate of the posterior mean of `\(1/l\)` assuming `\(n = 10\)` by
+implementing M = 3,000 Monte Carlo repetitions. 
+
+---
+
+#### Exercise 1
 
 
 ```r
-marks_1 = c(1,8,14,22,33,34,21,9,6,2) 
-marks_2 = c(0,4,16,25,27,42,23,4,9,0)  
+M = 3000
+n = 10
+alpha = 5
+s = 1
+pml = numeric(M)
+```
+---
+
+
+```r
+Z = n/(alpha + n - 1) 
+
+for (i in 1:M){ 
+ lam = rgamma(1, alpha, s) 
+ x = rexp(n, lam) 
+ pml[i] = Z*sum(x)/n + (1-Z)*s/(alpha-1) 
+ }
 ```
 
-Part 1
-=========================================
-(i) (a) Plot two graphs, one for each marker, for the distribution of the exam 
-marks given by the two markers. 
-[Hint: You may find the R command barplot() useful.] 
-(b) Comment on the graphs produced in part (i)(a). 
- [7] 
-One of the marked exam papers is selected at random and the scores given by each of 
-the markers are analysed further by question. Below are the scores given by each of 
-the exam markers for this selected exam paper for each of the 10 questions: 
-Question 1 2 3 4 5 6 7 8 9 10 
-Marker 1 4 1 5 1 4 6 4 5 3 6 
-Marker 2 3 2 4 0 3 4 2 3 3 6 
-You can enter the scores for Marker 1 and Marker 2 into R using: 
-marker_1 = c(4,1,5,1,4,6,4,5,3,6) 
-marker_2 = c(3,2,4,0,3,4,2,3,3,6) 
+---
 
 
-Part 1
-=========================================
-(ii) Perform a suitable test to determine whether the difference in the mean scores 
-of the two markers is zero or not, at the 5% confidence level, taking into 
-account that the two markers have marked the same exam paper. [5] 
-(iii) Perform the test specified in part (ii), ignoring that the two markers have 
-marked the same exam paper. 
+```r
+head(pml)
+```
+
+```
+## [1] 0.1535243 0.3042265 0.2576344 0.2093508 0.2201290 0.2151918
+```
+ 
+
+```r
+mean(pml)
+```
+
+```
+## [1] 0.2479498
+```
+A point estimate is given as the mean of the produced estimates, i.e.
+#mean(pml) [2]
+which gives 0.248. 
+---
+### Exercise 2
+
+Determine an estimate of the posterior mean of `\(1/l\)` and the value of x when
+n = 1,000, by implementing M = 3,000 Monte Carlo repetitions. 
+
+This time we use the same code as in (i) but we are recording the mean of 𝑥𝑥 for the case 𝑛𝑛 =
+1000.
 
 
-Part 1
-=========================================
-(iv) Comment on your conclusions from parts (ii) and (iii). [2] 
-(v) Comment on the issues arising when analysing paired data as independent 
-samples, and independent samples as though they were paired. [4] 
+```r
+M = 3000
+n = 1000
+alpha = 5
+s = 1
+pml = numeric(M)
+mx = numeric(M)
+Z = n/(alpha + n - 1)
+```
+
+---
+
+
+```r
+for (i in 1:M){
+ lam = rgamma(1, alpha, s)
+ x = rexp(n, lam)
+ mx[i] = mean(x)
+ pml[i] = Z*sum(x)/n + (1-Z)*s/(alpha-1)
+}
+```
+
+---
+
+
+```r
+mean(pml)
+```
+
+```
+## [1] 0.2455526
+```
+
+```r
+mean(mx)
+```
+
+```
+## [1] 0.2455348
+```
+
+With this new run, both estimates are equal to 0.245.
+
+---
+
+### Exercise 3
+
+Plot the histograms of the samples of the posterior mean of `\(1/l\)` and of x
+obtained in part (ii).
+
+
+
+```r
+hist(pml, main = "Histogram of posterior means", 
+ xlab = "Posterior means")
+hist(mx, main ="Histogram of the distribution of the means of x", 
+xlab = "mean of x")
+```
+---
+
+![](05-Exercise5_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+---
+
+![](05-Exercise5_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+---
+
+### Exercise 4
+
+Compare, by visual inspection of the graphs in part (iii), the distributions
+of the posterior mean of 1/l and the distribution of x when n = 1,000.
+
+#### Conclusion
+
+The distributions look identical.
+---
+
+### Exercise 5
+
+(v) Comment on the behaviour of the credibility model as n increases, relating
+your answer to your findings in part (iv). 
+
+#### Conclusion
+
+We should expect that the distributions are the same, [2]
+since the credibility factor 𝑍𝑍 tends to 1 as 𝑛𝑛 increases and therefore the posterior mean of 1⁄𝜆𝜆
+becomes 𝑥𝑥̅.
+
+---
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
