--- a/00-G1-CS1B-FIA-April-2021/Question_3.html
+++ b/00-G1-CS1B-FIA-April-2021/Question_3.html
@@ -3,7 +3,6 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Dragonfly Stats" />
     <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -13,17 +12,35 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## Modelling Data with R
-### Dragonfly Stats
-### 2016/12/12
+## Statistical Modelling with R for Actuarial Students
 
 ---
 
 
-[Total 22] CS1B A2021–4 
+
+
+&lt;style type="text/css"&gt;
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+&lt;/style&gt;
+
+***CS2B – Risk Modelling and Survival Analysis ***
+
+
+* The emphasis is placed on being able to apply statistical methods to actuarial problems using real data sets and the open-source software environment R. 
+
+* Time Series. Probability Distributions, Survival Analysis
+
+---
+
 3 A study was carried out to estimate the proportion, 𝑝, of workers that commute by 
 train to work. A total of n ൌ 200 workers were sampled at random and were asked the 
-question: ‘Do you take the train to work?’ The workers’ answers were recorded as a 
+question: ‘Do you take the train to work?’ 
+
+* The workers’ answers were recorded as a 
 binary outcome, yi, for worker i, with 1 for yes and 0 for no. The data are available in 
 the file BinaryTrain.RData.
 
@@ -31,20 +48,23 @@ the file BinaryTrain.RData.
 
 Two commuters, Alice and Norman, were interested in the study and proposed 
 different prior distributions for the proportion p. 
+&lt;p&gt;
+
 Alice assumed a discrete prior distribution g(p) given in the following table: 
+
 p 0.1 0.2 0.3 0.4 0.5 
 g(p) 0.5 0.2 0.2 0.05 0.05 
-Norman chose to use a beta prior distribution for p, with parameters 3 and 12. 
+Norman chose to use a beta prior distribution for `\(p\)`, with parameters 3 and 12. 
 
 ---
 
-Part 1
-=========================================
+### Exercise  1
+
 (i) (a) Calculate the mean and the standard deviation for Alice’s prior
-distribution. [4] 
+distribution. 
 (b) Generate 10,000 random values from Norman’s prior distribution. [1] 
 (c) Calculate the mean and standard deviation of the values generated in
-part (i)(b). [2] 
+part (i)(b).  
 (d) Comment on whether or not Alice and Norman have similar prior 
 beliefs for p. 
 
@@ -62,33 +82,50 @@ where ∑ yi is the total sum of all the binary data.
 
 ---
 
-Part 2
-=========================================
+### Exercise  2
 (ii) Plot the shape of the posterior density of p without identifying it.  
-(iii) Plot the density of Norman’s prior distribution by setting ylim = c(0,14). 
- [3] 
+
+
+---
+
+### Exercise  3
+
+Plot the density of Norman’s prior distribution by setting `ylim = c(0,14)`. 
+
 The posterior distribution of p is beta with parameters 3 + ∑ yi and 12 + n – ∑ yi
 . 
 
 ---
 
-Part 4
-=========================================
+### Exercise  4
+
 (iv) (a) Plot the posterior density of p by adding it to the plot in part (iii). 
 (b) Compare the two densities using your answer in part (iv)(a). 
 (c) Comment on the extent to which the posterior distribution is affected 
-by the prior distribution. [1] CS1B A2021–5 
+by the prior distribution. 
+
+---
+
+### Exercise  5
+
 (v) Determine a 90% interval estimate for p based on its posterior distribution. 
 
 
 ---
 
-Part 6
-=========================================
-(vi) Determine the exact posterior probability that p exceeds 0.25. [2] 
+---
+
+### Exercise 6
+
+(vi) Determine the exact posterior probability that p exceeds 0.25. 
 (vii) (a) Generate 10,000 samples from the posterior distribution of p. 
 (b) Calculate the proportion of sampled values of p that exceed 0.25. 
 (c) Compare your answer in part (vii)(b) with your answer in part (vi). 
+
+---
+
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
