--- a/00-H1-CS1B-ASI-March-2021/Question_4.html
+++ b/00-H1-CS1B-ASI-March-2021/Question_4.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.7/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -68,13 +68,14 @@ Five years of marketing expenditure and company sales by month
 Construct a scatterplot of the data. Comment on the relationship between the Sales &amp; 
 Spend based on the plot. 
 
-&lt;pre&gt;&lt;code&gt;
+
+```r
 plot(budget$Spend,budget$Sales)
-&lt;/code&gt;&lt;/pre&gt;
+```
 
 ---
 
-![](Question_4_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
+![](Question_4_files/figure-html/unnamed-chunk-4-1.png)&lt;!-- --&gt;
 
 The above scatter plot shows a positive linear relationship between marketing Spend and Sales data. 
 
@@ -86,12 +87,12 @@ The above scatter plot shows a positive linear relationship between marketing Sp
 plot(budget$Spend,budget$Sales, pch=18, col="blue")
 ```
 
-![](Question_4_files/figure-html/unnamed-chunk-4-1.png)&lt;!-- --&gt;
+![](Question_4_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
 
 ---
 
-Part 2
-=================
+### Exercise  2
+
 
 Calculate Pearson’s correlation coefficient between Sales and Spend of the company. 
 
@@ -107,19 +108,19 @@ cor(budget$Sales,budget$Spend)
 
 ---
 
-Part 3
-=====================================
+### Exercise  3
 
 Perform a hypothesis test for the null hypothesis that Pearson’s population correlation 
 coefficient is equal to zero, against the alternative that it is positive. You should report the 
 p-value of the test and a clear conclusion. 
 
 
-&lt;pre&gt;&lt;code&gt;
+
+```r
 cor.test(budget$Spend,budget$Sales,
          method="pearson",
          alternative = "greater")
-&lt;/code&gt;&lt;/pre&gt;
+```
 
 ---
 
@@ -150,8 +151,7 @@ cor.test(budget$Spend,budget$Sales,
 
 ---
 
-Part 4
-=====================================
+### Exercise  4
 
 Perform a simple linear regression analysis on the data. 
 
@@ -192,8 +192,8 @@ From the output, the estimate of parameter sigma is 10,650.
 
 ---
 
-Part 5
-====================================
+### Exercise  5
+
 
 Plot the fitted line on the data scatterplot. 
 
@@ -203,20 +203,31 @@ plot(budget$Spend,budget$Sales)
 abline(reg) 
 ```
 
-![](Question_4_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
+
+
 ---
 
-Part 6
-====================================
-State the proportion of the total variability of the responses explained by the model based 
-on your output in Part 4. 
+
+```r
+plot(budget$Spend,budget$Sales)
+abline(reg) 
+```
+
+![](Question_4_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
+
+
+---
+
+### Exercise  6
+
+State the proportion of the total variability of the responses explained by the model based on your output in Part 4. 
 
 From the R output, the proportion of total variability of the responses explained by the model is 94.12%. 
 
 ---
 
-Part 7
-====================================
+### Exercise  7
+
 Plot a graph of the residuals of the model fitted in Part 6 against the explanatory variable. 
 
 
@@ -225,14 +236,14 @@ Plot a graph of the residuals of the model fitted in Part 6 against the explanat
 plot(budget$Spend,residuals(reg))
 ```
 
-![](Question_4_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+![](Question_4_files/figure-html/unnamed-chunk-13-1.png)&lt;!-- --&gt;
 
 ---
 
-Part 8
-====================================
+### Exercise  8
 
-Obtain a 99% confidence interval for parameter sigma. (4)
+
+Obtain a 99% confidence interval for parameter sigma. 
 
 
 ```r
@@ -244,13 +255,14 @@ From the above, the confidence interval for parameter sigma is (-3630.15, 3630.1
 
 ---
 
-Part 9
-============================
-Comment on the validity of the model based on results in part (vii) and part (viii). 
+### Exercise  9
+
+Comment on the validity of the model based on results in exercises 7 and 8. 
 
 
-ix)
-Based on the results in both part (vii) and part (viii), the errors seem to be close to zero and the 
+#### Comments
+
+Based on the results in both exercises 7 and 8, the errors seem to be close to zero and the 
 confidence interval of residuals also contains 0. Hence the model seems to be a good fit. 
 
 ---
@@ -260,8 +272,8 @@ Part 10
 ============================
 
 Calculate the p-value of a hypothesis test for this suggestion (slope equal to 10), by 
-creating a suitable test statistic. (7)
-x)
+creating a suitable test statistic. 
+
 Let Ho: Beta = 10 and H1: Beta not equal to 10 
 
 
@@ -277,6 +289,8 @@ s = sqrt(sum(es^2)/(n-2))
 ```r
 SE = s/sqrt(sum((budget$Spend-mean(budget$Spend))^2))
 t = (b1-10)/SE 
+
+#p-value
 pt(t,58,lower.tail = FALSE)
 ```
 
@@ -302,14 +316,15 @@ Part 11
 Comment on the suggestion in Part 11. 
 
 * There is insufficient evidence to reject the null hypothesis at 5% level of significance. 
-* The slope is equal to 10 for this data. 
+* The slope can be assumed to be equal to 10 for this data. 
 
 ---
 
 
 Part 12
 ==================================
-Calculate the predicted amount of sales when the marketing spend is INR 4500. 
+Calculate the predicted amount of sales when the marketing spend is £4500. 
+
 
 
 ```r
@@ -321,7 +336,7 @@ y
 ## [1] 50821.17
 ```
 
-With a marketing spend of INR 4,500, the Sales would be INR 50,821. 
+With a marketing spend of $4,500, the Sales would be $50,821. 
 
 ---
     </textarea>
